fixed off center elements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,18 @@
 @tailwind utilities;
 
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+a {
+
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
